--- a/zh_CN/appendix/catwin32.html
+++ b/zh_CN/appendix/catwin32.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>catwin32 &#8212; HinetPy 0.6.6 文档</title>
+    <title>catwin32 &#8212; HinetPy 0+unknown 文档</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6.6',
+        VERSION:     '0+unknown',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="../appendix.html" title="附录"
              accesskey="P">上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0+unknown 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../appendix.html" accesskey="U">附录</a> &#187;</li> 
       </ul>
     </div>
@@ -68,7 +68,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0.6.6</a>
+    ../index.html" class="text-logo">HinetPy v0+unknown</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -192,7 +192,7 @@
         <li class="right" >
           <a href="../appendix.html" title="附录"
              >上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0+unknown 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../appendix.html" >附录</a> &#187;</li> 
       </ul>
     </div>
