--- a/zh_CN/py-modindex.html
+++ b/zh_CN/py-modindex.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>Python 模块索引 &#8212; HinetPy 0.6.6 文档</title>
+    <title>Python 模块索引 &#8212; HinetPy 0+unknown 文档</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.6',
+        VERSION:     '0+unknown',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="#" title="Python 模块索引"
              >模块</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0+unknown 文档</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -62,7 +62,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0.6.6</a>
+    index.html" class="text-logo">HinetPy v0+unknown</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -161,7 +161,7 @@
         <li class="right" >
           <a href="#" title="Python 模块索引"
              >模块</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0+unknown 文档</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
