--- a/_modules/HinetPy/client.html
+++ b/_modules/HinetPy/client.html
@@ -1322,7 +1322,7 @@
 <span class="sd">        [2019-12-06 00:00:00] INFO: You&#39;re using the latest release (v0.6.5).</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="kn">from</span> <span class="nn">HinetPy</span> <span class="kn">import</span> <span class="n">__version__</span><span class="p">,</span> <span class="n">__title__</span>
-        <span class="kn">from</span> <span class="nn">distutils.version</span> <span class="kn">import</span> <span class="n">StrictVersion</span>
+        <span class="kn">from</span> <span class="nn">distutils.version</span> <span class="kn">import</span> <span class="n">LooseVersion</span>
 
         <span class="n">url</span> <span class="o">=</span> <span class="s2">&quot;https://pypi.python.org/pypi/</span><span class="si">{}</span><span class="s2">/json&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">__title__</span><span class="p">)</span>
         <span class="n">r</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">url</span><span class="p">)</span>
@@ -1331,7 +1331,7 @@
             <span class="k">return</span> <span class="kc">False</span>
         <span class="n">latest_release</span> <span class="o">=</span> <span class="n">r</span><span class="o">.</span><span class="n">json</span><span class="p">()[</span><span class="s2">&quot;info&quot;</span><span class="p">][</span><span class="s2">&quot;version&quot;</span><span class="p">]</span>
 
-        <span class="k">if</span> <span class="n">StrictVersion</span><span class="p">(</span><span class="n">latest_release</span><span class="p">)</span> <span class="o">&gt;</span> <span class="n">StrictVersion</span><span class="p">(</span><span class="n">__version__</span><span class="p">):</span>
+        <span class="k">if</span> <span class="n">LooseVersion</span><span class="p">(</span><span class="n">latest_release</span><span class="p">)</span> <span class="o">&gt;</span> <span class="n">LooseVersion</span><span class="p">(</span><span class="n">__version__</span><span class="p">):</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
                 <span class="s2">&quot;</span><span class="si">%s</span><span class="s2"> v</span><span class="si">%s</span><span class="s2"> is released. See </span><span class="si">%s</span><span class="s2"> for details.&quot;</span><span class="p">,</span>
                 <span class="n">__title__</span><span class="p">,</span>
