--- a/appendix/response.html
+++ b/appendix/response.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>Instrumental Response &#8212; HinetPy 0+unknown documentation</title>
+    <title>Instrumental Response &#8212; HinetPy 0.6.6+12.gcc692bf documentation</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0+unknown',
+        VERSION:     '0.6.6+12.gcc692bf',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="channeltable.html" title="Channel Table file"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0+unknown documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../appendix.html" accesskey="U">Appendix</a> &#187;</li> 
       </ul>
     </div>
@@ -67,7 +67,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0+unknown</a>
+    ../index.html" class="text-logo">HinetPy v0.6.6+12.gcc692bf</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -292,7 +292,7 @@ SAC PZ file.</p>
         <li class="right" >
           <a href="channeltable.html" title="Channel Table file"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0+unknown documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../appendix.html" >Appendix</a> &#187;</li> 
       </ul>
     </div>
