--- a/py-modindex.html
+++ b/py-modindex.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>Python Module Index &#8212; HinetPy 0+unknown documentation</title>
+    <title>Python Module Index &#8212; HinetPy 0.6.6+12.gcc692bf documentation</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0+unknown',
+        VERSION:     '0.6.6+12.gcc692bf',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -50,7 +50,7 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0+unknown documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -61,7 +61,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0+unknown</a>
+    index.html" class="text-logo">HinetPy v0.6.6+12.gcc692bf</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -160,7 +160,7 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0+unknown documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
