--- a/api.html
+++ b/api.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>API Reference &#8212; HinetPy 0.6.6+12.gcc692bf documentation</title>
+    <title>API Reference &#8212; HinetPy 0.6.6+13.g3372050 documentation</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.6+12.gcc692bf',
+        VERSION:     '0.6.6+13.g3372050',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="examples/example2.html" title="Request continous waveform data from obspy Catalog"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+13.g3372050 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -66,7 +66,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0.6.6+12.gcc692bf</a>
+    index.html" class="text-logo">HinetPy v0.6.6+13.g3372050</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -168,7 +168,7 @@
         <li class="right" >
           <a href="examples/example2.html" title="Request continous waveform data from obspy Catalog"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+12.gcc692bf documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.6+13.g3372050 documentation</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
