--- a/tutorial/conversion.html
+++ b/tutorial/conversion.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>Data conversion &#8212; HinetPy 0.6.6+13.g3372050 documentation</title>
+    <title>Data conversion &#8212; HinetPy 0.6.6+14.g543b751 documentation</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6.6+13.g3372050',
+        VERSION:     '0.6.6+14.g543b751',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="get-event-waveform.html" title="Get Event Waveform"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+13.g3372050 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+14.g543b751 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" accesskey="U">Tutorial</a> &#187;</li> 
       </ul>
     </div>
@@ -67,7 +67,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0.6.6+13.g3372050</a>
+    ../index.html" class="text-logo">HinetPy v0.6.6+14.g543b751</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -239,7 +239,7 @@ They accept a list of string or a string contains wildcard.</p>
         <li class="right" >
           <a href="get-event-waveform.html" title="Get Event Waveform"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+13.g3372050 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.6+14.g543b751 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" >Tutorial</a> &#187;</li> 
       </ul>
     </div>
