--- a/zh_CN/examples/example2.html
+++ b/zh_CN/examples/example2.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>根据obspy Catalog申请连续波形数据 &#8212; HinetPy 0.6.7+1.g80b2381 文档</title>
+    <title>根据obspy Catalog申请连续波形数据 &#8212; HinetPy 0.6.7+2.g6cbf4cc 文档</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6.7+1.g80b2381',
+        VERSION:     '0.6.7+2.g6cbf4cc',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="example1.html" title="根据CSV地震目录申请连续波形数据"
              accesskey="P">上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+1.g80b2381 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+2.g6cbf4cc 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../examples.html" accesskey="U">示例</a> &#187;</li> 
       </ul>
     </div>
@@ -68,7 +68,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0.6.7+1.g80b2381</a>
+    ../index.html" class="text-logo">HinetPy v0.6.7+2.g6cbf4cc</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -193,7 +193,7 @@
         <li class="right" >
           <a href="example1.html" title="根据CSV地震目录申请连续波形数据"
              >上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+1.g80b2381 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+2.g6cbf4cc 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../examples.html" >示例</a> &#187;</li> 
       </ul>
     </div>
