--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>HinetPy - A NIED Hi-net Client for seismologists &#8212; HinetPy 0.6.7+2.g6cbf4cc documentation</title>
+    <title>HinetPy - A NIED Hi-net Client for seismologists &#8212; HinetPy 0.6.7+3.g9c74310 documentation</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.7+2.g6cbf4cc',
+        VERSION:     '0.6.7+3.g9c74310',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="installation.html" title="Installation"
              accesskey="N">next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+2.g6cbf4cc documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+3.g9c74310 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -62,7 +62,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    #" class="text-logo">HinetPy v0.6.7+2.g6cbf4cc</a>
+    #" class="text-logo">HinetPy v0.6.7+3.g9c74310</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -216,7 +216,7 @@ responses as SAC polezero files.</p>
         <li class="right" >
           <a href="installation.html" title="Installation"
              >next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+2.g6cbf4cc documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+3.g9c74310 documentation</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
