--- a/license.html
+++ b/license.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>License &#8212; HinetPy 0.6.7+3.g9c74310 documentation</title>
+    <title>License &#8212; HinetPy 0.6.7+4.g5efd50b documentation</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.7+3.g9c74310',
+        VERSION:     '0.6.7+4.g5efd50b',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="changelog.html" title="Changelog"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+3.g9c74310 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+4.g5efd50b documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -62,7 +62,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0.6.7+3.g9c74310</a>
+    index.html" class="text-logo">HinetPy v0.6.7+4.g5efd50b</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -166,7 +166,7 @@
         <li class="right" >
           <a href="changelog.html" title="Changelog"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+3.g9c74310 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+4.g5efd50b documentation</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
