--- a/zh_CN/tutorial.html
+++ b/zh_CN/tutorial.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>教程 &#8212; HinetPy 0.6.7+3.g9c74310 文档</title>
+    <title>教程 &#8212; HinetPy 0.6.7+4.g5efd50b 文档</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.7+3.g9c74310',
+        VERSION:     '0.6.7+4.g5efd50b',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="installation.html" title="安装"
              accesskey="P">上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+3.g9c74310 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -67,7 +67,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0.6.7+3.g9c74310</a>
+    index.html" class="text-logo">HinetPy v0.6.7+4.g5efd50b</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -189,7 +189,7 @@
         <li class="right" >
           <a href="installation.html" title="安装"
              >上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+3.g9c74310 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
