deploy: 0dbc80a2b936f27cb1b5a99544cf70f0827c4bac

--- a/zh_CN/tutorial/get-catalog.html
+++ b/zh_CN/tutorial/get-catalog.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>获取目录 &#8212; HinetPy 0.6.7+4.g5efd50b 文档</title>
+    <title>获取目录 &#8212; HinetPy 0.6.7+5.g0dbc80a 文档</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6.7+4.g5efd50b',
+        VERSION:     '0.6.7+5.g0dbc80a',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="conversion.html" title="数据转换"
              accesskey="P">上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" accesskey="U">教程</a> &#187;</li> 
       </ul>
     </div>
@@ -68,7 +68,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0.6.7+4.g5efd50b</a>
+    ../index.html" class="text-logo">HinetPy v0.6.7+5.g0dbc80a</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -188,7 +188,7 @@
         <li class="right" >
           <a href="conversion.html" title="数据转换"
              >上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" >教程</a> &#187;</li> 
       </ul>
     </div>
