--- a/zh_CN/index.html
+++ b/zh_CN/index.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>HinetPy - A NIED Hi-net Client for seismologists &#8212; HinetPy 0.6.7+4.g5efd50b 文档</title>
+    <title>HinetPy - A NIED Hi-net Client for seismologists &#8212; HinetPy 0.6.7+5.g0dbc80a 文档</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.7+4.g5efd50b',
+        VERSION:     '0.6.7+5.g0dbc80a',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -52,7 +52,7 @@
         <li class="right" >
           <a href="installation.html" title="安装"
              accesskey="N">下一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -63,7 +63,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    #" class="text-logo">HinetPy v0.6.7+4.g5efd50b</a>
+    #" class="text-logo">HinetPy v0.6.7+5.g0dbc80a</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -217,7 +217,7 @@ responses as SAC polezero files.</p>
         <li class="right" >
           <a href="installation.html" title="安装"
              >下一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+4.g5efd50b 文档</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
