deploy: 43ae46b1352b249732805bebfdad48e3a3c7a394

--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; HinetPy 0.6.9+11.g4f885a2 documentation</title>
+  <title>Search &mdash; HinetPy 0.6.9+12.g43ae46b documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -30,7 +30,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                0.6.9+11.g4f885a2
+                0.6.9+12.g43ae46b
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
