deploy: a69c3f8a08fb128454908518bae609202973ccfd

--- a/zh_CN/genindex.html
+++ b/zh_CN/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>索引 &mdash; HinetPy v0.6.10.dev30+g066a54e 文档</title>
+  <title>索引 &mdash; HinetPy v0.6.10.dev32+ga69c3f8 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -28,7 +28,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev30+g066a54e
+                v0.6.10.dev32+ga69c3f8
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -88,6 +88,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  | <a href="#模"><strong>模</strong></a>
  
 </div>
@@ -252,16 +253,20 @@
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.to_datetime">to_datetime() (在 HinetPy.utils 模块中)</a>
 </li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel.to_pz">to_pz() (HinetPy.win32.Channel 方法)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.header.html#HinetPy.header.Network.url">url (HinetPy.header.Network 属性)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel.write_sacpz">write_sacpz() (HinetPy.win32.Channel 方法)</a>
 </li>
   </ul></td>
 </tr></table>
