deploy: fd1308347e983c0d8d2db66e677bca5939739537

--- a/zh_CN/search.html
+++ b/zh_CN/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>搜索 &mdash; HinetPy v0.6.10.dev41+gc9814af 文档</title>
+  <title>搜索 &mdash; HinetPy v0.6.10.dev42+gfd13083 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -31,7 +31,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev41+gc9814af
+                v0.6.10.dev42+gfd13083
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
