--- a/zh_CN/genindex.html
+++ b/zh_CN/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>索引 &mdash; HinetPy v0.6.10.dev47+g8d66d55 文档</title>
+  <title>索引 &mdash; HinetPy v0.6.10.dev48+ge90d8f4 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -28,7 +28,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev47+g8d66d55
+                v0.6.10.dev48+ge90d8f4
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -124,6 +124,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Event">Event (HinetPy.client 中的类)</a>
+</li>
       <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_pz">extract_pz() (在 HinetPy.win32 模块中)</a>
 </li>
   </ul></td>
@@ -163,21 +165,14 @@
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.haversine">haversine() (在 HinetPy.utils 模块中)</a>
 </li>
       <li>
-    HinetPy.client
-
-      <ul>
-        <li><a href="api/HinetPy.client.html#module-HinetPy.client">模块</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
     HinetPy.utils
 
       <ul>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">模块</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     HinetPy.win32
 
@@ -249,11 +244,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.client.html#HinetPy.client.Client.select_stations">select_stations() (HinetPy.client.Client 方法)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer() (在 HinetPy.utils 模块中)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.header.html#HinetPy.header.Network.starttime">starttime (HinetPy.header.Network 属性)</a>
+</li>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Station">Station (HinetPy.client 中的类)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -289,8 +286,6 @@
     模块
 
       <ul>
-        <li><a href="api/HinetPy.client.html#module-HinetPy.client">HinetPy.client</a>
-</li>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">HinetPy.utils</a>
 </li>
         <li><a href="api/HinetPy.win32.html#module-HinetPy.win32">HinetPy.win32</a>
