--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; HinetPy v0.6.10.dev47+g8d66d55 documentation</title>
+  <title>Index &mdash; HinetPy v0.6.10.dev48+ge90d8f4 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev47+g8d66d55
+                v0.6.10.dev48+ge90d8f4
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -122,6 +122,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Event">Event (class in HinetPy.client)</a>
+</li>
       <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_pz">extract_pz() (in module HinetPy.win32)</a>
 </li>
   </ul></td>
@@ -161,21 +163,14 @@
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.haversine">haversine() (in module HinetPy.utils)</a>
 </li>
       <li>
-    HinetPy.client
-
-      <ul>
-        <li><a href="api/HinetPy.client.html#module-HinetPy.client">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
     HinetPy.utils
 
       <ul>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     HinetPy.win32
 
@@ -211,8 +206,6 @@
     module
 
       <ul>
-        <li><a href="api/HinetPy.client.html#module-HinetPy.client">HinetPy.client</a>
-</li>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">HinetPy.utils</a>
 </li>
         <li><a href="api/HinetPy.win32.html#module-HinetPy.win32">HinetPy.win32</a>
@@ -258,11 +251,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.client.html#HinetPy.client.Client.select_stations">select_stations() (HinetPy.client.Client method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer() (in module HinetPy.utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.header.html#HinetPy.header.Network.starttime">starttime (HinetPy.header.Network attribute)</a>
+</li>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Station">Station (class in HinetPy.client)</a>
 </li>
   </ul></td>
 </tr></table>
