deploy: 0f7f4db26b0bca37772bbedc33ca6d1f0089019f

--- a/zh_CN/genindex.html
+++ b/zh_CN/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>索引 &mdash; HinetPy v0.7.1.dev4+g055e976 文档</title>
+  <title>索引 &mdash; HinetPy v0.7.2.dev1+g0f7f4db 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -29,7 +29,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.7.1.dev4+g055e976
+                v0.7.2.dev1+g0f7f4db
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -97,19 +97,19 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel">Channel (HinetPy.win32 中的类)</a>
+      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.channels">channels（HinetPy.header.Network 属性）</a>
 </li>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.channels">channels (HinetPy.header.Network 属性)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel">Channel（HinetPy.win32 中的类）</a>
 </li>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.check_cmd_exists">check_cmd_exists() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.check_cmd_exists">check_cmd_exists()（在 HinetPy.utils 模块中）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.check_package_release">check_package_release() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.check_package_release">check_package_release()（在 HinetPy.utils 模块中）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.check_service_update">check_service_update() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.check_service_update">check_service_update() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client">Client (HinetPy.client 中的类)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client">Client（HinetPy.client 中的类）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -117,7 +117,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.doctor">doctor() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.doctor">doctor() （HinetPy.client.Client 方法）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -125,15 +125,15 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Event">Event (HinetPy.client 中的类)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Event">Event（HinetPy.client 中的类）</a>
 </li>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_pz">extract_pz() (在 HinetPy.win32 模块中)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_pz">extract_pz()（在 HinetPy.win32 模块中）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sac">extract_sac() (在 HinetPy.win32 模块中)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sac">extract_sac()（在 HinetPy.win32 模块中）</a>
 </li>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sacpz">extract_sacpz() (在 HinetPy.win32 模块中)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sacpz">extract_sacpz()（在 HinetPy.win32 模块中）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -141,21 +141,21 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_arrivaltime">get_arrivaltime() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_arrivaltime">get_arrivaltime() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_continuous_waveform">get_continuous_waveform() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_continuous_waveform">get_continuous_waveform() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_event_waveform">get_event_waveform() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_event_waveform">get_event_waveform() （HinetPy.client.Client 方法）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_focalmechanism">get_focalmechanism() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_focalmechanism">get_focalmechanism() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_selected_stations">get_selected_stations() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_selected_stations">get_selected_stations() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_station_list">get_station_list() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_station_list">get_station_list() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_waveform">get_waveform() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.get_waveform">get_waveform() （HinetPy.client.Client 方法）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -163,7 +163,7 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.haversine">haversine() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.haversine">haversine()（在 HinetPy.utils 模块中）</a>
 </li>
       <li>
     HinetPy.utils
@@ -187,7 +187,7 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.info">info() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.info">info() （HinetPy.client.Client 方法）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -195,7 +195,7 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.login">login() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.login">login() （HinetPy.client.Client 方法）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -203,7 +203,7 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.merge">merge() (在 HinetPy.win32 模块中)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.merge">merge()（在 HinetPy.win32 模块中）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -211,11 +211,11 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.name">name (HinetPy.header.Network 属性)</a>
+      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.name">name（HinetPy.header.Network 属性）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network">Network (HinetPy.header 中的类)</a>
+      <li><a href="api/HinetPy.header.html#HinetPy.header.Network">Network（HinetPy.header 中的类）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -223,11 +223,11 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.point_inside_box">point_inside_box() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.point_inside_box">point_inside_box()（在 HinetPy.utils 模块中）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.point_inside_circular">point_inside_circular() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.point_inside_circular">point_inside_circular()（在 HinetPy.utils 模块中）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -235,7 +235,7 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.read_ctable">read_ctable() (在 HinetPy.win32 模块中)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.read_ctable">read_ctable()（在 HinetPy.win32 模块中）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -243,15 +243,15 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.select_stations">select_stations() (HinetPy.client.Client 方法)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Client.select_stations">select_stations() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer()（在 HinetPy.utils 模块中）</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.starttime">starttime (HinetPy.header.Network 属性)</a>
+      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.starttime">starttime（HinetPy.header.Network 属性）</a>
 </li>
-      <li><a href="api/HinetPy.client.html#HinetPy.client.Station">Station (HinetPy.client 中的类)</a>
+      <li><a href="api/HinetPy.client.html#HinetPy.client.Station">Station（HinetPy.client 中的类）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -259,7 +259,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.to_datetime">to_datetime() (在 HinetPy.utils 模块中)</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.to_datetime">to_datetime()（在 HinetPy.utils 模块中）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -267,7 +267,7 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.url">url (HinetPy.header.Network 属性)</a>
+      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.url">url（HinetPy.header.Network 属性）</a>
 </li>
   </ul></td>
 </tr></table>
@@ -275,7 +275,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel.write_sacpz">write_sacpz() (HinetPy.win32.Channel 方法)</a>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel.write_sacpz">write_sacpz() （HinetPy.win32.Channel 方法）</a>
 </li>
   </ul></td>
 </tr></table>
