deploy: 2d48c9262bc15f1bf71f10bea540dbe18604a792

--- a/zh_CN/genindex.html
+++ b/zh_CN/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>索引 &mdash; HinetPy v0.7.2.dev9+gcf20f4b 文档</title>
+  <title>索引 &mdash; HinetPy v0.7.2.dev10+g2d48c92 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -33,7 +33,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev9+gcf20f4b
+                v0.7.2.dev10+g2d48c92
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
