--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; HinetPy v0.7.2.dev9+gcf20f4b documentation</title>
+  <title>Search &mdash; HinetPy v0.7.2.dev10+g2d48c92 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -35,7 +35,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev9+gcf20f4b
+                v0.7.2.dev10+g2d48c92
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
