--- a/zh_CN/search.html
+++ b/zh_CN/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>搜索 &mdash; HinetPy v0.7.2.dev10+g2d48c92 文档</title>
+  <title>搜索 &mdash; HinetPy v0.7.2.dev11+g469bbc6 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -36,7 +36,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev10+g2d48c92
+                v0.7.2.dev11+g469bbc6
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
