--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; HinetPy v0.7.2.dev39+g683a84a documentation</title>
+  <title>Index &mdash; HinetPy v0.7.2.dev40+g97b0180 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
@@ -14,7 +14,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=b47d9723"></script>
+        <script src="_static/documentation_options.js?v=31d4b326"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -34,7 +34,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev39+g683a84a
+                v0.7.2.dev40+g97b0180
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -101,7 +101,7 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel">Channel (class in HinetPy.win32)</a>
+      <li><a href="api/HinetPy.channel.html#HinetPy.channel.Channel">Channel (class in HinetPy.channel)</a>
 </li>
       <li><a href="api/HinetPy.header.html#HinetPy.header.Network.channels">channels (HinetPy.header.Network attribute)</a>
 </li>
@@ -170,14 +170,21 @@
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.haversine">haversine() (in module HinetPy.utils)</a>
 </li>
       <li>
+    HinetPy.channel
+
+      <ul>
+        <li><a href="api/HinetPy.channel.html#module-HinetPy.channel">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     HinetPy.utils
 
       <ul>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     HinetPy.win32
 
@@ -213,6 +220,8 @@
     module
 
       <ul>
+        <li><a href="api/HinetPy.channel.html#module-HinetPy.channel">HinetPy.channel</a>
+</li>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">HinetPy.utils</a>
 </li>
         <li><a href="api/HinetPy.win32.html#module-HinetPy.win32">HinetPy.win32</a>
@@ -288,7 +297,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.win32.html#HinetPy.win32.Channel.write_sacpz">write_sacpz() (HinetPy.win32.Channel method)</a>
+      <li><a href="api/HinetPy.channel.html#HinetPy.channel.Channel.write_sacpz">write_sacpz() (HinetPy.channel.Channel method)</a>
 </li>
   </ul></td>
 </tr></table>
