--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; HinetPy v0.7.2.dev39+g683a84a documentation</title>
+  <title>Search &mdash; HinetPy v0.7.2.dev40+g97b0180 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
@@ -15,7 +15,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=b47d9723"></script>
+        <script src="_static/documentation_options.js?v=31d4b326"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -37,7 +37,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev39+g683a84a
+                v0.7.2.dev40+g97b0180
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
