deploy: 7fc59ac2e17d2f5d30c31210488cf35a8b293b2d

--- a/zh_CN/genindex.html
+++ b/zh_CN/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>索引 &mdash; HinetPy v0.7.2.dev41+g36486e7 文档</title>
+  <title>索引 &mdash; HinetPy v0.7.2.dev43+g7fc59ac 文档</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
@@ -14,7 +14,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=46a37771"></script>
+        <script src="_static/documentation_options.js?v=c19edd9f"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
         <script src="_static/translations.js?v=beaddf03"></script>
@@ -35,7 +35,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev41+g36486e7
+                v0.7.2.dev43+g7fc59ac
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -95,15 +95,12 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
- | <a href="#U"><strong>U</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.channels">channels（HinetPy.header.Network 属性）</a>
-</li>
       <li><a href="api/HinetPy.channel.html#HinetPy.channel.Channel">Channel（HinetPy.channel 中的类）</a>
 </li>
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.check_cmd_exists">check_cmd_exists()（在 HinetPy.utils 模块中）</a>
@@ -177,6 +174,13 @@
         <li><a href="api/HinetPy.channel.html#module-HinetPy.channel">module</a>
 </li>
       </ul></li>
+      <li>
+    HinetPy.header
+
+      <ul>
+        <li><a href="api/HinetPy.header.html#module-HinetPy.header">module</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -223,6 +227,8 @@
       <ul>
         <li><a href="api/HinetPy.channel.html#module-HinetPy.channel">HinetPy.channel</a>
 </li>
+        <li><a href="api/HinetPy.header.html#module-HinetPy.header">HinetPy.header</a>
+</li>
         <li><a href="api/HinetPy.utils.html#module-HinetPy.utils">HinetPy.utils</a>
 </li>
         <li><a href="api/HinetPy.win32.html#module-HinetPy.win32">HinetPy.win32</a>
@@ -233,10 +239,6 @@
 
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.name">name（HinetPy.header.Network 属性）</a>
-</li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.header.html#HinetPy.header.Network">Network（HinetPy.header 中的类）</a>
 </li>
@@ -268,11 +270,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.client.html#HinetPy.client.Client.select_stations">select_stations() （HinetPy.client.Client 方法）</a>
 </li>
-      <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer()（在 HinetPy.utils 模块中）</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.starttime">starttime（HinetPy.header.Network 属性）</a>
+      <li><a href="api/HinetPy.utils.html#HinetPy.utils.split_integer">split_integer()（在 HinetPy.utils 模块中）</a>
 </li>
       <li><a href="api/HinetPy.client.html#HinetPy.client.Station">Station（HinetPy.client 中的类）</a>
 </li>
@@ -283,14 +283,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.utils.html#HinetPy.utils.to_datetime">to_datetime()（在 HinetPy.utils 模块中）</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="U">U</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/HinetPy.header.html#HinetPy.header.Network.url">url（HinetPy.header.Network 属性）</a>
 </li>
   </ul></td>
 </tr></table>
