deploy: 07f5e56392861307729cb183ff5c9f4a89e50ea2

--- a/zh_CN/search.html
+++ b/zh_CN/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>搜索 &mdash; HinetPy v0.9.1.dev9+gbbebb61 文档</title>
+  <title>搜索 &mdash; HinetPy v0.9.1.dev11+g07f5e56 文档</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
@@ -15,7 +15,7 @@
   
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=737ccb97"></script>
+        <script src="_static/documentation_options.js?v=c3d7fdcb"></script>
         <script src="_static/doctools.js?v=9a2dae69"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
         <script src="_static/translations.js?v=beaddf03"></script>
@@ -38,7 +38,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.9.1.dev9+gbbebb61
+                v0.9.1.dev11+g07f5e56
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
